<resources>
    <string name="app_name">GasShop</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="STT">STT</string>
    <string name="Tenhang">Tên Hàng</string>
    <string name="Ketqua">Kết quả</string>
    <string name="Thoigian">Thời gian</string>
    <string name="Chitiet"> Chi tiết</string>
    <string name="google_maps_key">AIzaSyDOoNmssD1HddkPDjew-N9t2qxEdNrrx98</string>
    <string name="title_activity_thongke">ThongkeActivity</string>
    <string name="Tenkh"> Tên khách hàng</string>
    <string name="SDT">0974852699</string>
    <string name="Tien">1.000.000</string>
    <string name="DTNgay">Doanh Thu Trong Ngày</string>
    <string name="DTThang">Doanh Thu Trong Tháng</string>
    <string name="DTTong"> Tổng Doanh Thu</string>
    <string name="KhTOP">Hàng Bán Chạy</string>
    <string name="KhThanThiet">Khách Hàng Thân Thiết</string>
    <string name="KhHuy">Khách Hàng Hủy Đơn Nhiều</string>
    <string name="TongTien">Tổng Tiền:1.000.000 VND</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="title_activity_doanh_thu">DoanhThuActivity</string>
    <string name="title_activity_dtngay">DTNgayActivity</string>
    <string name="title_activity_dttong">DTTongActivity</string>
    <string name="title_activity_hang_hot">HangHotActivity</string>
    <string name="auth_failed">Quá trình xác thực đã thất bại</string>
    <string name="loiDaCoEmail">Địa chỉ email đã được sử dụng bởi một tài khoản khác.</string>
    <string name="loiEmailSai">Địa chỉ email bị định dạng sai.</string>
    <string name="loipass">Mật khẩu không hợp lệ.</string>
    <string name="loikhongCoMail">Không có hồ sơ người dùng nào tương ứng với email này.</string>
    <string name="minpass">Mật khẩu phải có ít nhất 6 ký tự.</string>
    <string name="doiMatKhau">Quên mật khẩu, thay đổi mật khẩu.</string>
    <string name="doimatkhau_title">Đặt lại mật khẩu</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="cancel">Hủy</string>
    <string name="ok">Đồng ý</string>
    <string name="loading">Đang tải…</string>
    <string name="Required">Trường bắt buộc</string>
    <string name="disconect">Không có kết nối internet</string>
    <string name="nhapmail">Chưa có email nào</string>
    <string name="doimatkhau">Chọn "Đồng ý", Một email chứa hướng dẫn đặt lại mật khẩu sẽ được gửi đến</string>
</resources>
