<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingRight="10dp">


        <ImageView
            android:id="@+id/imWeather"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center|left"
            android:layout_weight="0.99"
            android:src="@drawable/ic_list_thongke" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTenHang"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="top"
                android:padding="10dp"
                android:text="@string/Tenhang"
                android:textColor="@android:color/black"
                android:textSize="12dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtThoigian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/Thoigian"
                android:textColor="@android:color/black"
                android:textSize="10dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtTien"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/Tien"
                    android:textColor="@android:color/black"
                    android:textSize="10dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtKQ"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/Ketqua"
                    android:textColor="@android:color/black"
                    android:textSize="10dp"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>

        <ImageView

            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center|left"
            android:layout_weight="1"
            android:src="@drawable/ic_true_icon" />


    </LinearLayout>
</LinearLayout>