<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sign_in_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    >

<android.support.v7.widget.CardView

    android:layout_width="match_parent"
    android:layout_centerInParent="true"
    android:layout_height="wrap_content">
    <LinearLayout
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

       android:background="#a11d2581"
        android:orientation="vertical"
       >



        <LinearLayout

            android:id="@+id/email_password_fields"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@android:color/transparent"
                android:focusable="true"
                android:focusableInTouchMode="true">
            </LinearLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/etEmailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

               >

            <EditText
                android:id="@+id/field_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:textColor="@color/cardview_light_background"

                android:textColorHint="@color/cardview_light_background"
                android:textSize="@dimen/margin_normal" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/etPasswordLayout"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/field_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:textColor="@color/cardview_light_background"
                    android:textColorHint="@color/cardview_light_background"
                    android:textSize="@dimen/margin_normal" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>



            <Button
              android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textSize="@dimen/margin_normal" />



        <TextView
            android:layout_marginBottom="20dp"
            android:id="@+id/resetpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center"
            android:text="@string/doiMatKhau"
            android:textColor="#0721e7"
            android:textSize="@dimen/margin_normal" />



    </LinearLayout>

</android.support.v7.widget.CardView>
</RelativeLayout>