<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.blue.gasshop.Activity.DoanhThuActivity"
    tools:showIn="@layout/activity_doanh_thu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="Doanh Thu"
            android:textColor="#7d080808"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#FFF2F2F2"
            android:paddingRight="10dp" />


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:layout_margin="5dp"
                app:cardCornerRadius="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <Button

                    android:id="@+id/btDTNgay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                   android:background="@color/cardview_light_background"
                    android:text="@string/DTNgay" />

            </android.support.v7.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#FFF2F2F2"
                android:paddingRight="10dp" />


            <android.support.v7.widget.CardView
                android:layout_margin="5dp"
                app:cardCornerRadius="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btDTThang"
                    android:background="@color/cardview_light_background"
                    android:text="@string/DTThang" />

            </android.support.v7.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#FFF2F2F2"
                android:paddingRight="10dp" />


            <android.support.v7.widget.CardView
                android:layout_margin="5dp"
                app:cardCornerRadius="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btDTTong"
                    android:background="@color/cardview_light_background"
                    android:text="@string/DTTong" />

            </android.support.v7.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#FFF2F2F2"
                android:paddingRight="10dp" />

        </TableLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Biểu đồ doanh thu"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#FFF2F2F2"
            android:paddingRight="10dp" />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_margin="5dp"
                    app:cardCornerRadius="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/btKhTop"
                        android:background="@color/cardview_light_background"
                        android:text="@string/KhTOP" />


                </android.support.v7.widget.CardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#FFF2F2F2"
                    android:paddingRight="10dp" />




                <android.support.v7.widget.CardView
                    android:layout_margin="5dp"
                    android:visibility="gone"
                    app:cardCornerRadius="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <Button
                        android:id="@+id/btKHhuy"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/cardview_light_background"
                        android:text="Sản phẩm bán được ít nhất" />


                </android.support.v7.widget.CardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"

                    android:background="#FFF2F2F2"
                    android:paddingRight="10dp" />



        </LinearLayout>


        <!--<RatingBar-->
    </LinearLayout>


</LinearLayout>
